src/github/1.atoms/link/link.css
:host {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 5px;
}

a {
  text-decoration: none;
  display: flex;
}

a:link,
a:visited {
  color: black;
}

a:hover,
a:active {
  color: #2e67d3;
}

:host(.align-left) {
  justify-content: flex-start;
}

:host(.underline) a:hover {
  text-decoration: underline;
}

:host(.blue),
:host(.blue) a:link,
:host(.blue) a:visited {
  color: #2e67d3;
}

